--- a/checker-api/package.json
+++ b/checker-api/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mongo": "^0.1.0",
     "mongoose": "^6.5.4"
   }
 }
